meson: missing include headers for install
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/gr/include/gnuradio/meson.build
+++ b/gr/include/gnuradio/meson.build
@@ -42,7 +42,9 @@ runtime_headers = [
     'port_interface.h',
     'hier_block.h',
     'runtime_proxy.h',
-    'sptr_magic.h'
+    'sptr_magic.h',
+    'realtime.h',
+    'runtime.h'
 ]
 
 install_headers(runtime_headers, subdir : 'gnuradio')
