modtool: add json_dep as subproject for newmod
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/utils/modtool/newmod/blocklib/newmod/lib/meson.build
+++ b/utils/modtool/newmod/blocklib/newmod/lib/meson.build
@@ -1,5 +1,5 @@
 newmod_sources += []
-newmod_deps += [gnuradio_gr_dep, volk_dep, fmt_dep, pmtf_dep, python3_embed_dep]
+newmod_deps += [gnuradio_gr_dep, volk_dep, fmt_dep, pmtf_dep, python3_embed_dep, json_dep]
 
 block_cpp_args = ['-DHAVE_CPU']
 
