gr: add raw buffer mechanism for single mapped buffer
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/gr/include/gnuradio/meson.build
+++ b/gr/include/gnuradio/meson.build
@@ -44,7 +44,8 @@ runtime_headers = [
     'runtime_proxy.h',
     'sptr_magic.h',
     'realtime.h',
-    'runtime.h'
+    'runtime.h',
+    'buffer_sm.h'
 ]
 
 install_headers(runtime_headers, subdir : 'gnuradio')
