meson: add numpy include path to python bindings
On some systems (e.g. openSuse and nixOS) python packages are split
between different install directories. This leads to include errors
where includes like `#include <numpy/arrayobject.h>` cannot be resolved.

This PR fixes this by determining the numpy include path in the main
meson.build file and adding it manually to all the relevant meson files
as well as the j2 template for the autogenerated block files.

The approach is inspired by the numpy documentation for using numpy from
meson [1].

[1] https://numpy.org/devdocs/f2py/buildtools/meson.html

Signed-off-by: Alexander Krimm <A.Krimm@gsi.de>

--- a/blocklib/filter/python/filter/meson.build
+++ b/blocklib/filter/python/filter/meson.build
@@ -30,15 +30,15 @@ gen_filter_pybind = custom_target('gen_filter_pybind',
                             '--blocks', d['blocks'],
                             '--imports', d['imports'],
                             '--module', d['module'],
-                            '--output_file', '@OUTPUT@', 
+                            '--output_file', '@OUTPUT@',
                             '--build_dir', join_paths(meson.build_root())],
-                        install : false)      
+                        install : false)
 
 filter_pybind_sources += gen_filter_pybind
 
 gnuradio_blocklib_filter_pybind = py3_inst.extension_module('filter_python',
-    filter_pybind_sources, 
-    include_directories: ['../../lib'],
+    filter_pybind_sources,
+    include_directories: ['../../lib', incdir_numpy],
     dependencies : [gnuradio_blocklib_filter_dep, python3_dep, pybind11_dep],
     link_language : 'cpp',
     install : true,
