--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,8 +46,8 @@ include(GrComponent)
 # cmake-format: off
 SET(VERSION_MAJOR 3)
 SET(VERSION_API   10)
-SET(VERSION_ABI   3)
-SET(VERSION_PATCH 0)
+SET(VERSION_ABI   4)
+SET(VERSION_PATCH 0-rc1)
 include(GrVersion) #setup version info
 # cmake-format: on
 
