--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,8 +43,8 @@ include(GrComponent)
 # Set the version information here
 SET(VERSION_MAJOR 3)
 SET(VERSION_API   9)
-SET(VERSION_ABI   7)
-SET(VERSION_PATCH 0)
+SET(VERSION_ABI   8)
+SET(VERSION_PATCH 0-rc1)
 include(GrVersion) #setup version info
 
 # Minimum dependency versions for central dependencies:
