--- a/gr-fec/lib/CMakeLists.txt
+++ b/gr-fec/lib/CMakeLists.txt
@@ -90,7 +90,7 @@ target_link_libraries(
 
 # Only include the LDPC work if we have GSL installed
 if(GSL_FOUND)
-    target_link_libraries(gnuradio-fec PUBLIC GSL::gsl)
+    target_link_libraries(gnuradio-fec PRIVATE GSL::gsl)
     target_sources(
         gnuradio-fec
         PRIVATE ldpc_bit_flip_decoder_impl.cc ldpc_par_mtrx_encoder_impl.cc
